--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "lerna": "^3.8.0"
+    "lerna": "^3.8.0",
+    "lerna-changelog": "^0.8.2"
   }
 }
