--- a/packages/eslint-haixue-core/package.json
+++ b/packages/eslint-haixue-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-haixue-core",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.1-beta.0",
   "description": "",
   "main": "index.js",
   "scripts": {
