fix: 修复 lerna.json changelog 配置

--- a/lerna.json
+++ b/lerna.json
@@ -5,9 +5,9 @@
   "changelog": {
     "repo": "jianglin-wu/test-lerna",
     "labels": {
-      "tag: bugfix": "Bug fix",
-      "tag: enhancement": "Enhancement",
-      "tag: feature": "Feature"
+      "bugfix": "Bug fix",
+      "enhancement": "Enhancement",
+      "feature": "Feature"
     },
     "cacheDir": ".changelog"
   },
