fix: 修复 changelog 工具无法匹配
changelog 配置的 label 键名多了 tag: 字符，去除使其能够匹配。
另外修改 label 下键值 Featrue 标签为 New Featrue。

Closes #2

--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,7 @@
     "labels": {
       "bugfix": "Bug fix",
       "enhancement": "Enhancement",
-      "feature": "Feature"
+      "feature": "New Feature"
     },
     "cacheDir": ".changelog"
   },
