--- a/packages/eslint-haixue-mp/package.json
+++ b/packages/eslint-haixue-mp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-haixue-mp",
-  "version": "0.0.1-rc.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
