--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "commitizen": "^3.0.5",
+    "cz-conventional-changelog": "^2.1.0",
     "lerna": "^3.8.0",
     "lerna-changelog": "^0.8.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
