--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "devDependencies": {
     "commitizen": "^3.0.5",
-    "cz-conventional-changelog": "^2.1.0",
+    "conventional-changelog-cli": "^2.0.11",
     "lerna": "^3.8.0",
-    "lerna-changelog": "^0.8.2"
+    "lerna-changelog": "^0.8.2",
+    "validate-commit-msg": "^2.14.0"
   },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+  "scripts": {
+    "commit": "git-cz",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   }
 }
