--- a/packages/eslint-haixue-core/package.json
+++ b/packages/eslint-haixue-core/package.json
@@ -2,7 +2,7 @@
   "name": "eslint-haixue-core",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
