--- a/packages/eslint-haixue-core/package.json
+++ b/packages/eslint-haixue-core/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
+    "start": "echo start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
