--- a/packages/eslint-haixue-antd/package.json
+++ b/packages/eslint-haixue-antd/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint-haixue-core": "^0.0.1"
+  }
 }
