--- a/packages/eslint-haixue-antd/package.json
+++ b/packages/eslint-haixue-antd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-haixue-antd",
-  "version": "0.2.0",
+  "version": "0.2.2-alpha.0",
   "description": "",
   "main": "index.js",
   "scripts": {
