--- a/packages/eslint-haixue-core/package.json
+++ b/packages/eslint-haixue-core/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "start": "echo start",
+    "start": "echo hello",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
