--- a/packages/eslint-haixue-core/package.json
+++ b/packages/eslint-haixue-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-haixue-core",
-  "version": "0.2.1",
+  "version": "0.2.2-beta.0",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
